Fixed some layout issues reported by IE

--- a/main/src/webapp/WEB-INF/styles/toplevel.css
+++ b/main/src/webapp/WEB-INF/styles/toplevel.css
@@ -34,6 +34,9 @@
     padding-top: 20px;
     font-size: large;
 }
+.lp_heading_column {
+    width: 200px;
+}
 .lp_heading_summary_container {
     font-size: small;
 }
